added a button to remove item from cart